[tool.poetry]
name = "lampylib"
version = "0.1.0"
description = "Launchpad Mini python library"
authors = ["Pavel Kulyov <kulyov.pavel@gmail.com>"]
license = "MIT"
readme = "README.rst"

repository = "https://github.com/pkulev/lampy"
homepage = "https://github.com/pkulev/lampy"

keywords = ["launchpad", "midi"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.poetry.scripts]
lampy = "lampylib.__main__:main"

[tool.poetry.dependencies]
python = "^3.7"
python-rtmidi = "*"

[tool.poetry.dev-dependencies]
codecov = "*"
flake8 = "*"
pylint = "*"
pytest = "*"
pytest-coverage = "*"
pytest-pylint = "*"
sphinx = "*"
tox = "^3.13"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
